--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,27 @@
-.form-control {
-    display: inline-block;
-    margin-bottom: 0;
-    vertical-align: middle;
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:300');
+@import url('https://fonts.googleapis.com/css?family=Cabin+Sketch');
+.page-header{
+	font-family: 'Cabin Sketch', cursive;
+	font-size: 55px;
+	font-weight: 70;
+	letter-spacing: -3px;
+	border-bottom: none;
 }
 
-.navbar-custom {
-    background-color: #fff000;
+small {
+	font-family: 'Work Sans', sans-serif;	
+}
+
+@media (min-width: 0px) and (max-width: 990px) {
+    .signup-form {
+    	border-left: 0px;
+    }
+}
+
+.mamaji {
+	font-family: 'Cabin Sketch', cursive;
+	font-size: 35px;
+	font-weight: 70;
+	letter-spacing: -3px;
+	border-bottom: none;
 }
